--- a/webapp/resources/css/cssLayout.css
+++ b/webapp/resources/css/cssLayout.css
@@ -71,10 +71,18 @@
     background-color:lightskyblue
 }
 
-html{
-    background-image: url(/resources/images/background.png);
+html,body{
+    background-image: url("/src/main/webapp/resources/images/background.png")
 }
 
 .img{
     border-radius: 10px;
+}
+
+.glass{
+    backdrop-filter: blur(15px) saturate(150%);
+    -webkit-backdrop-filter: blur(15px) saturate(150%);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
 }
