añadida función de administrador

--- a/webapp/WEB-INF/template/plantillaIkea.xhtml
+++ b/webapp/WEB-INF/template/plantillaIkea.xhtml
@@ -21,64 +21,64 @@
 
 
 
-<!--
-                <p:toolbar id="tb" class="glass">
-                    <f:facet name="left">
-                        <p:sidebar widgetVar="sidebarLeft">
-                            <h3>Menu</h3>
-                            <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
-                            <p:button value="Perfil" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
-                            <p:button value="Cesta" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
-                        </p:sidebar>
-                        <p:commandButton icon="pi pi-bars" type="button" onclick="PF('sidebarLeft').show()" styleClass="p-mr-2" />
-                        <p:button value="IKEA 2" styleClass="ui-button-outlined" outcome="/publico/Principal.xhtml"/>
-
-                    </f:facet>
-                    <f:facet name="right">
-                        <p:sidebar widgetVar="sidebarRight" position="right" style="width:30rem">
-                            <h3>Bienvenido a IKEA 2</h3>
-                            <p:divider></p:divider>
-
-                            <div class="p-d-flex p-flex-column">
-
-                                <div class="p-d-flex">
-
-                                    <div>
-                                        <h3>Regístrate</h3>
-                                        <p>Disfruta de un montón de ventajas y ofertas exclusivas.</p>
-                                        <p:button value="Registro" styleClass="ui-button-outlined" outcome="/publico/Registro.xhtml"  />
-                                    </div>
-
-                                </div>
-                                <div>
-                                    <p:divider align="center" >
-                                        <b>ó</b>
-                                    </p:divider>
-                                </div>
-                                <div class="p-d-flex">
-                                    <div>
-                                        <h3>Inicia sesión</h3>
-                                        <p>Accede con tu cuenta para ver tu cesta y tus compras.</p>
-                                        <p:button value="Iniciar sesión" styleClass="ui-button-outlined" outcome="/publico/LogIn.xhtml"  />
-                                    </div>              
-                                </div>
-                                <p:divider></p:divider>
-                            </div>
-
-
-                        </p:sidebar>
-                        <p:button icon="pi pi-home" styleClass="p-mx-1" outcome="/publico/Principal.xhtml"/>
-                        <p:button icon="pi pi-user" styleClass="p-mx-1" outcome="/privado/Perfil.xhtml"/>
-                        <p:button icon="pi pi-shopping-cart" styleClass="p-mx-1" outcome="/privado/Cesta.xhtml"/>
-                        <p:commandButton class="p-ml-3" icon="pi pi-sign-out" rendered="" type="button" value="Cerrar sesión"/> 
-                        <p:commandButton class="p-ml-3" icon="pi pi-users" rendered="True" type="button" value="Regístrate o inicia sesión" onclick="PF('sidebarRight').show()" /> 
-
-                    </f:facet>
-                </p:toolbar>
-
-                <p:sticky target="tb"/>
-
--->
+                <!--
+                                <p:toolbar id="tb" class="glass">
+                                    <f:facet name="left">
+                                        <p:sidebar widgetVar="sidebarLeft">
+                                            <h3>Menu</h3>
+                                            <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
+                                            <p:button value="Perfil" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
+                                            <p:button value="Cesta" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
+                                        </p:sidebar>
+                                        <p:commandButton icon="pi pi-bars" type="button" onclick="PF('sidebarLeft').show()" styleClass="p-mr-2" />
+                                        <p:button value="IKEA 2" styleClass="ui-button-outlined" outcome="/publico/Principal.xhtml"/>
+                
+                                    </f:facet>
+                                    <f:facet name="right">
+                                        <p:sidebar widgetVar="sidebarRight" position="right" style="width:30rem">
+                                            <h3>Bienvenido a IKEA 2</h3>
+                                            <p:divider></p:divider>
+                
+                                            <div class="p-d-flex p-flex-column">
+                
+                                                <div class="p-d-flex">
+                
+                                                    <div>
+                                                        <h3>Regístrate</h3>
+                                                        <p>Disfruta de un montón de ventajas y ofertas exclusivas.</p>
+                                                        <p:button value="Registro" styleClass="ui-button-outlined" outcome="/publico/Registro.xhtml"  />
+                                                    </div>
+                
+                                                </div>
+                                                <div>
+                                                    <p:divider align="center" >
+                                                        <b>ó</b>
+                                                    </p:divider>
+                                                </div>
+                                                <div class="p-d-flex">
+                                                    <div>
+                                                        <h3>Inicia sesión</h3>
+                                                        <p>Accede con tu cuenta para ver tu cesta y tus compras.</p>
+                                                        <p:button value="Iniciar sesión" styleClass="ui-button-outlined" outcome="/publico/LogIn.xhtml"  />
+                                                    </div>              
+                                                </div>
+                                                <p:divider></p:divider>
+                                            </div>
+                
+                
+                                        </p:sidebar>
+                                        <p:button icon="pi pi-home" styleClass="p-mx-1" outcome="/publico/Principal.xhtml"/>
+                                        <p:button icon="pi pi-user" styleClass="p-mx-1" outcome="/privado/Perfil.xhtml"/>
+                                        <p:button icon="pi pi-shopping-cart" styleClass="p-mx-1" outcome="/privado/Cesta.xhtml"/>
+                                        <p:commandButton class="p-ml-3" icon="pi pi-sign-out" rendered="" type="button" value="Cerrar sesión"/> 
+                                        <p:commandButton class="p-ml-3" icon="pi pi-users" rendered="True" type="button" value="Regístrate o inicia sesión" onclick="PF('sidebarRight').show()" /> 
+                
+                                    </f:facet>
+                                </p:toolbar>
+                
+                                <p:sticky target="tb"/>
+                
+                -->
 
 
                 <div class="p-d-flex p-jc-between p-my-3" id="toolbar">
@@ -86,9 +86,16 @@
                     <div>
                         <p:sidebar widgetVar="sidebarLeft">
                             <h3>Menu</h3>
-                            <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
-                            <p:button value="Perfil" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
-                            <p:button value="Cesta" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
+                            <div class="p-grid">
+                                <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
+                                <p:button value="Perfil" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
+                                <p:button value="Cesta" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
+                                <div class="p-mt-6">
+                                    <p:button value="Administración" rendered="true" styleClass="ui-button-flat ui-button-plain" outcome="/privado/Administracion.xhtml" icon="pi pi-cog"/>
+                                </div>
+                                
+                            </div>
+
                         </p:sidebar>
                         <p:commandButton icon="pi pi-bars" type="button" onclick="PF('sidebarLeft').show()" styleClass="p-mr-2 ui-button-flat" />
                         <p:button value="IKEA 2" styleClass="ui-button-outlined" outcome="/publico/Principal.xhtml"/>
@@ -141,7 +148,6 @@
                     </div>
                 </div>
 
--->
             </ui:insert>
         </div>
 
