--- a/webapp/WEB-INF/template/plantillaIkea.xhtml
+++ b/webapp/WEB-INF/template/plantillaIkea.xhtml
@@ -90,9 +90,7 @@
                                 <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
                                 <p:button value="Perfil" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
                                 <p:button value="Cesta" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
-                                <div class="p-mt-6">
-                                    <p:button value="Administración" rendered="true" styleClass="ui-button-flat ui-button-plain" outcome="/privado/Administracion.xhtml" icon="pi pi-cog"/>
-                                </div>
+                                <p:button value="Administración" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/adminsitrador/Administracion.xhtml"/>
                                 
                             </div>
 
