--- a/webapp/WEB-INF/template/plantillaIkea.xhtml
+++ b/webapp/WEB-INF/template/plantillaIkea.xhtml
@@ -28,7 +28,7 @@
                                             <h3>Menu</h3>
                                             <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
                                             <p:button value="Perfil" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
-                                            <p:button value="Cesta" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
+                                            <p:button value="Cesta" rendered="" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/cliente/Cesta.xhtml"/>
                                         </p:sidebar>
                                         <p:commandButton icon="pi pi-bars" type="button" onclick="PF('sidebarLeft').show()" styleClass="p-mr-2" />
                                         <p:button value="IKEA 2" styleClass="ui-button-outlined" outcome="/publico/Principal.xhtml"/>
@@ -69,7 +69,7 @@
                                         </p:sidebar>
                                         <p:button icon="pi pi-home" styleClass="p-mx-1" outcome="/publico/Principal.xhtml"/>
                                         <p:button icon="pi pi-user" styleClass="p-mx-1" outcome="/privado/Perfil.xhtml"/>
-                                        <p:button icon="pi pi-shopping-cart" styleClass="p-mx-1" outcome="/privado/Cesta.xhtml"/>
+                                        <p:button icon="pi pi-shopping-cart" styleClass="p-mx-1" outcome="/privado/cliente7Cesta.xhtml"/>
                                         <p:commandButton class="p-ml-3" icon="pi pi-sign-out" rendered="" type="button" value="Cerrar sesión"/> 
                                         <p:commandButton class="p-ml-3" icon="pi pi-users" rendered="True" type="button" value="Regístrate o inicia sesión" onclick="PF('sidebarRight').show()" /> 
                 
@@ -88,9 +88,9 @@
                             <h3>Menu</h3>
                             <div class="p-grid">
                                 <p:button value="Productos" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/publico/Principal.xhtml"/>
-                                <p:button value="Perfil" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Perfil.xhtml"/>
-                                <p:button value="Cesta" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/Cesta.xhtml"/>
-                                <p:button value="Administración" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/adminsitrador/Administracion.xhtml"/>
+                                <p:button value="Perfil" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/cliente/Perfil.xhtml"/>
+                                <p:button value="Cesta" rendered="true" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/cliente/Cesta.xhtml"/>
+                                <p:button value="Administración" rendered="#{plantillaController.esAdminLogueado()}" styleClass="ui-button-flat ui-button-plain" style="width: 100%" outcome="/privado/adminsitrador/Administracion.xhtml"/>
                                 
                             </div>
 
@@ -137,9 +137,9 @@
                         </p:sidebar>
                         <p:button id="home" icon="pi pi-home" styleClass="p-mx-1 ui-button-flat" outcome="/publico/Principal.xhtml"/>
                         <p:tooltip for="home" value="Página principal" position="bottom"/>
-                        <p:button id="perfil" icon="pi pi-user" styleClass="p-mx-1 ui-button-flat" outcome="/privado/Perfil.xhtml"/>
+                        <p:button id="perfil" icon="pi pi-user" styleClass="p-mx-1 ui-button-flat" outcome="/privado/cliente/Perfil.xhtml"/>
                         <p:tooltip for="perfil" value="Perfil" position="bottom"/>
-                        <p:button id="carro" icon="pi pi-shopping-cart" styleClass="p-mx-1 ui-button-flat" outcome="/privado/Cesta.xhtml"/>
+                        <p:button id="carro" icon="pi pi-shopping-cart" styleClass="p-mx-1 ui-button-flat" outcome="/privado/cliente/Cesta.xhtml"/>
                         <p:tooltip for="carro" value="Cesta" position="bottom"/>
                         <p:commandButton class="p-ml-3" icon="pi pi-sign-out" rendered="" type="button" value="Cerrar sesión"/> 
                         <p:commandButton class="p-ml-3" icon="pi pi-users" rendered="True" type="button" value="Regístrate o inicia sesión" onclick="PF('sidebarRight').show()" /> 
